--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,21 @@
 nav {
-  width: 100%;
-  background-color: #C9E8E2;
+  width: 100%;  
   box-shadow: rgba(0, 0, 0, 0.25);
   position: fixed; 
   height: 100px;
+  z-index: 4;
+  left: 0;
+  top: 0px;
+}
+nav, .subcrible, .desc2, .rectangle {
+  background-color: #C9E8E2;
+
 }
 li {
   display: flex;
   font-size: 24px; 
 }
 li a {
-  color: #433C36;
   padding: 20px 20px;
   text-decoration: none;
 }
@@ -18,6 +23,8 @@ li a {
   width: 510px; 
   height: 666px; 
   margin-top: 200px;
+}
+.image6, .box4, .subcrible, .colum1, .box {
   margin-left: 240px;
 }
 .image13 {
@@ -30,10 +37,13 @@ li a {
   width: 383px; 
   height: 425px; 
 }
-.location, .headline, .text, input::placeholder, .button, .colum1, p, h3, li, .numbermeaning {
+.location, .headline, .text, input::placeholder, .button, .colum1, p, h3, li, .numbermeaning, .content, h2 {
   font-family: 'Courier New', Courier, monospace;
   color: #433C36;
   font-style: italic;
+}
+h2 {
+  font-size: 40px; 
 }
 .location {
   position: absolute;
@@ -44,18 +54,14 @@ li a {
   letter-spacing: 15%;
  font-size: 48px;
  z-index: -1;
- 
 }
 .subcrible {
-  background-color: #C9E8E2;
   width: 1440px;
   height: 431px;
-  margin-left: 240px;
   margin-top: 111px;
 }
 .headline {
   text-align: center;
-  font-size: 40px;
   letter-spacing: 5%;
   padding-top: 70px;
   padding-bottom: 30px;
@@ -79,10 +85,11 @@ form {
 }
 .button {
   width: 160px;
-  color: #433C36;
-  background-color: #F7E1D4;
  margin-left: 25px;
  font-size: 20px;  
+}
+.button, hr, .desc, .PERFECTLY-PLANNED-VACATION {
+  background-color: #F7E1D4;
 }
 input::placeholder {
   font-size: 20px; 
@@ -94,11 +101,9 @@ input::placeholder {
   float: left;
   text-align: justify;
   margin-top: 100px;
-  line-height: 192%;
 }
 .colum1 {
 width: 389px;
-margin-left: 240px;
 letter-spacing: 5%;
 font-size: 25px;
 
@@ -110,7 +115,6 @@ font-size: 25px;
   font-size: 14px;
 }
 hr {
-  background-color: #F7E1D4;
   height: 44px;
   width: 384px;
   border: none;
@@ -120,9 +124,7 @@ hr {
 }
 .box {
   width: 1440px;
-  display: flex;
-  margin-left: 240px;
- 
+  display: flex; 
 }
 .gallery, .gallery1 {
 width: 450px;
@@ -136,25 +138,16 @@ margin-top: 100px;
 .desc, .desc1, .desc2 {
   width: 379px; 
   height: 312px; 
-  line-height: 192%;
   z-index: 3;
   position: absolute;
   top: 350px;
   left: 35px;
-  text-align: justify;
-  
-}
-.desc {
-  background-color: #F7E1D4;
-  
+  text-align: justify; 
 }
 .desc1 {
   background-color: #D6ECFA;
   margin-left: 45px;
   
-}
-.desc2 {
-  background-color: #C9E8E2;
 }
 .descretail {
   padding:  0px 20px;
@@ -169,8 +162,61 @@ margin-top: 240px;
 margin-left: 300px;
 font-size: 34px;
 text-align: center;
+justify-content: space-around;
+margin-right: 300px;
 }
 .numbermeaning {
-  font-size: 20px;
-  
+  font-size: 20px; 
+}
+.content {
+  width: 320px; 
+  height: 320px;
+  text-align: justify;
+}
+.image {
+  display: flex;
+  margin: 100px 240px;
+}
+.scenery, .content {
+  margin-left: 52px;
+}
+.travel-delight {
+  margin-left: 116px;
+}
+p {
+  line-height: 192%;
+}
+.rectangle {
+  width: 33px;
+  height: 329px;
+  margin-left: 377px;
+}
+.box3, .box4 {
+  display: flex 
+}
+.delight {
+ width: 856px;
+ height: 189px;
+ text-align: justify; 
+ margin-left: 116px;
+}
+.box4 {
+  margin-top: 100px; 
+}
+.PERFECTLY-PLANNED-VACATION {
+  width: 697px; 
+  height: 450px; 
+  position: absolute;
+  margin-left: 743px;
+  margin-top: 38px;
+  text-align: justify;
+}
+.picture {
+  position: relative; 
+}
+.vacation  {
+  margin: 100px 50px 0px 50px; 
+}
+.round-the-world {
+  margin: 50px 50px; 
 }
